Fix note editor toolbar cut off bug

--- a/app/assets/stylesheets/note-editor.css
+++ b/app/assets/stylesheets/note-editor.css
@@ -17,6 +17,7 @@
 
 .quill-container {
     width: 100%;
+    height: 100%;
     overflow: hidden;
     border: none;
     display: flex;
